spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ object {
   padding: 0 !important;
 }
 .medpadbox {
-  padding: 5vh;
+  padding: 10vh;
   border: 4px #000000 solid;
 }
 .bigpad {
@@ -59,8 +59,8 @@ object {
 }
 .bigmargin {
   height: 30vh;
-  margin-top: 30vh;
-  margin-bottom: 30vh;
+  margin-top: 35vh;
+  margin-bottom: 35vh;
 }
 
 /* Fonts */
